--- a/src/App.css
+++ b/src/App.css
@@ -60,7 +60,7 @@ h6 {
   left: 0;
   width: 100%;
   height: 100%;
-  background: #d5f79f;
+  background: rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -680,14 +680,18 @@ h6 {
   margin-top: 12px;
   font-weight: 600;
 }
-.zumba-images img{
+.zumba-images img {
   width: 22rem;
   /* margin: 1rem; */
 }
 
 /* Contact Styles */
 .contact-hero {
-  background: linear-gradient(to right, rgba(60, 38, 38, 0.6), rgba(0, 0, 0, 0.6)),
+  background: linear-gradient(
+      to right,
+      rgba(60, 38, 38, 0.6),
+      rgba(0, 0, 0, 0.6)
+    ),
     url("./Assets/tatto-design.webp") center/cover no-repeat fixed;
   border-radius: 10px;
   width: 95%;
@@ -991,10 +995,10 @@ footer li {
     margin: 2rem auto;
     border-radius: 10px;
   }
-  .zumba-images img{
-  width: 20rem;
-  margin: auto;
-}
+  .zumba-images img {
+    width: 20rem;
+    margin: auto;
+  }
 
   /* About Styles */
   .over-story-container img,
